Test/good/mutual_rec.tt
import Data.Nat

data Bool : Type
  where False : Bool
        True : Bool

isEven : Nat -> Bool
isOdd : Nat -> Bool

isEven Z = True
pat n : Nat =>
  isEven (S n) = isOdd n

isOdd Z = False
pat n : Nat =>
  isOdd (S n) = isEven n