Test/bad/implicit/wrong_use_on_rhs.tt
import Data.Nat

f : {n : Nat} -> Nat
pat n =>
  f {n} = n